src/test/resources/org/nest/nestml/_cocos/valid/illegalVarInFor.nestml
neuron Dummy:
  function f():
    x integer
    for x in 1 ... 5 step 1:

    end
  end
end